--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -29,13 +29,18 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "hbs": "^4.2.0",
     "mongoose": "^6.3.3",
     "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sass": "^1.52.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -43,9 +48,13 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/hbs": "^4.0.1",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
