--- a/nestjs/.env
+++ b/nestjs/.env
@@ -1,4 +1,5 @@
 ENV_PORT=3333
 ACCESS_TOKEN_SECRET=my_token_secret
+ACCESS_COOKIE_SECRET=my_cookie_secret
 GOOGLE_SECRET=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
 GOOGLE_CLIENT_ID=468879087858-cbnk4hos1rg6mbo406tp4eu2omnffuo7.apps.googleusercontent.com
