--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -30,10 +30,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.3",
+    "google-auth-library": "^8.0.2",
     "hbs": "^4.2.0",
     "mongoose": "^6.3.3",
     "passport": "^0.5.3",
+    "passport-cookie": "^1.0.9",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -50,7 +51,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
     "@types/hbs": "^4.0.1",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
