--- a/reactjs/.env
+++ b/reactjs/.env
@@ -1,5 +1,6 @@
 HTTPS=true
 REACT_APP_ENV_PORT=3333
+REACT_APP_FACEBOOK_APP_ID=1164144831093742
 REACT_APP_ACCESS_TOKEN_SECRET=my_token_secret
 REACT_APP_ACCESS_COOKIE_SECRET=my_cookie_secret
 REACT_APP_GOOGLE_SECRET=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
