--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.4",
     "@types/sass": "^1.43.1",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.182"
   }
 }
