--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "google-auth-library": "^8.0.2",
@@ -35,6 +36,7 @@
     "mongoose": "^6.3.3",
     "passport": "^0.5.3",
     "passport-cookie": "^1.0.9",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
